Fix intermittent wrapping issues on profiles

--- a/src/scss/_overwrites.scss
+++ b/src/scss/_overwrites.scss
@@ -43,5 +43,13 @@ html {
         left: 20px;
       }
     }
+
+    &.profile {
+      .layout-wrapper {
+        .layout_columns {
+          flex-flow: row nowrap;
+        }
+      }
+    }
   }
 }
